export const snapshot = {};

snapshot[`build a site with liquid 1`] = `4`;

snapshot[`build a site with liquid 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".liquid",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`build a site with liquid 3`] = `
[
]
`;

snapshot[`build a site with liquid 4`] = `
{
  content: '["red","green","blue"]
',
  data: {
    colors: [
      "red",
      "green",
      "blue",
    ],
    content: "{{ colors | json }}
",
    date: 1970-01-01T00:00:00.000Z,
    layout: null,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    slug: "data",
    tags: [
    ],
    url: "/data.json",
  },
  dest: {
    ext: ".json",
    path: "/data",
  },
  src: {
    asset: undefined,
    ext: ".liquid",
    path: "/data.json",
    remote: undefined,
    slug: "data",
  },
}
`;

snapshot[`build a site with liquid 5`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Hello World</title>
  </head>
  <body>
    <main><h1>Hello World</h1>
</main>
  </body>
</html>
',
  data: {
    content: "<h1>{{ title }}</h1>
",
    date: 1970-01-01T00:00:00.000Z,
    layout: "basic.liquid",
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    slug: "index",
    tags: [
    ],
    title: "Hello World",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    asset: undefined,
    ext: ".liquid",
    path: "/index",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`build a site with liquid 6`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>liquid filter example</title>
  </head>
  <body>
    <main><h1>LIQUID FILTER EXAMPLE</h1></main>
  </body>
</html>
',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    layout: "basic.liquid",
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    slug: "liquid-filter",
    tags: [
    ],
    title: "liquid filter example",
    url: "/liquid-filter/",
  },
  dest: {
    ext: ".html",
    path: "/liquid-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/liquid-filter",
    remote: undefined,
    slug: "liquid-filter",
  },
}
`;

snapshot[`build a site with liquid 7`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>The title</title>
  </head>
  <body>
    <main><p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<div>hello (async)</div>

<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
</main>
  </body>
</html>
',
  data: {
    content: '<p>{% upperCase title %}</p>
<p>{% upperCase "The title" %}</p>
<p>{% upperCaseAsync title %}</p>
<p>{% upperCaseAsync "The title" %}</p>
<div>{{ "hello" | returnAsync }}</div>

{% include "partial.liquid" %}
{% include "./_includes/partial.liquid" %}
',
    date: 1970-01-01T00:00:00.000Z,
    layout: "basic.liquid",
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    slug: "with-helpers",
    tags: [
    ],
    title: "The title",
    url: "/with-helpers/",
  },
  dest: {
    ext: ".html",
    path: "/with-helpers/index",
  },
  src: {
    asset: undefined,
    ext: ".liquid",
    path: "/with-helpers",
    remote: undefined,
    slug: "with-helpers",
  },
}
`;
